--- a/src/pages/advancedmetahumanplayer/index.astro
+++ b/src/pages/advancedmetahumanplayer/index.astro
@@ -9,7 +9,7 @@ const projectData = {
   title: "Advanced Metahuman Player",
   description: "Standard player riutilizzabile che utilizza Metahumans super fedeli, ottimizzati per il gaming.",
   imageUrl: "/assets/travyplay-screenshot.jpg", 
-  tags: ["UE5","C++"]
+  tags: ["UnrealEngine","cplusplus"]
 };
 ---
 
