--- a/src/pages/inventorysystem/index.astro
+++ b/src/pages/inventorysystem/index.astro
@@ -9,7 +9,7 @@ const projectData = {
   title: "Inventory System",
   description: "Sistema di inventario riutilizzabile, compatibile con Unreal Engine 5.",
   imageUrl: "/assets/travyplay-screenshot.jpg", // Assicurati che questa immagine sia in /public/assets/
-  tags: ["UE5","C++"]
+  tags: ["UnrealEngine","cplusplus"]
 };
 ---
 
