--- a/src/pages/trueweathersystem/index.astro
+++ b/src/pages/trueweathersystem/index.astro
@@ -9,7 +9,8 @@ const projectData = {
   title: "True Weather System",
   description: "Simulazione realistica del ciclo giorno-notte e delle condizioni atmosferiche in Unreal Engine, con gestione di tempo reale o scalabile e calendario completo giorno/mese/anno. ",
   imageUrl: "/assets/travyplay-screenshot.jpg", 
-   tags: ["UE5","C++"]
+  tags: ["UnrealEngine","cplusplus"]
+
 };
 ---
 
