--- a/src/pages/weaponsystem/index.astro
+++ b/src/pages/weaponsystem/index.astro
@@ -9,7 +9,8 @@ const projectData = {
   title: "Weapon System",
   description: "Classi per definire armi e munizioni, meccaniche di sparo, ricarica e  tanto altro. Compatibile con Unreal Engine 5.",
   imageUrl: "/assets/travyplay-screenshot.jpg", 
-  tags: ["UE5","C++"]
+  tags: ["UnrealEngine","cplusplus"]
+
 };
 ---
 
