--- a/src/pages/travyplay/index.astro
+++ b/src/pages/travyplay/index.astro
@@ -9,7 +9,33 @@ const projectData = {
   title: "TravyPlay",
   description: "Media center in Flutter per gestire musica, video, IPTV e libri.",
   imagesUrls: ["assets/img_main_travyplay.png", "assets/img_main_travyplay2.png", "assets/img_main_travyplay3.png"], 
-  tags: ["Dart", "Flutter", "IOS", "Android"]
+  tags: ["Dart", "Flutter", "IOS", "Android"],
+  features: [
+    {
+      title: "Gestione Musica",
+      description: "Organizza e riproduci la tua musica, Crea playlist o filtra per generi, artisti o album",
+      imageUrl: "assets/img_main_travyplay4.png" // Corrisponde a /public/assets/feature_media.png
+    },
+
+    {
+      title: "Film & Serie TV",
+      description: "Godi i tuoi contenuti video etichettabili e filtrabili per tipo, genere o raccolta",
+      imageUrl: "assets/img_main_travyplay6.png" // Corrisponde a /public/assets/feature_crossplatform.png
+    },
+
+     {
+      title: "Liste IPTV",
+      description: "Guarda canali da tutto il mondo in chiaro, filtrati per nazione o categoria",
+      imageUrl: "assets/img_main_travyplay7.png" // Corrisponde a /public/assets/feature_crossplatform.png
+    },
+    
+    {
+      title: "Libreria Intelligente",
+      description: "Importa i tuoi eBook e documenti oppure oleggia o leggi gratuitamente da OpenLibrary & InternetArchive con la sezione dedicata.",
+      imageUrl: "assets/img_main_travyplay5.png" // Corrisponde a /public/assets/feature_library.png
+    },
+    
+  ]
 };
 ---
 
