project travyplay page update

--- a/src/pages/travyplay/index.astro
+++ b/src/pages/travyplay/index.astro
@@ -14,25 +14,24 @@ const projectData = {
     {
       title: "Gestione Musica",
       description: "Organizza e riproduci la tua musica, Crea playlist o filtra per generi, artisti o album",
-      imageUrl: "assets/img_main_travyplay4.png" // Corrisponde a /public/assets/feature_media.png
-    },
+      imageUrl: "assets/img_main_travyplay4.png" 
 
     {
       title: "Film & Serie TV",
       description: "Godi i tuoi contenuti video etichettabili e filtrabili per tipo, genere o raccolta",
-      imageUrl: "assets/img_main_travyplay6.png" // Corrisponde a /public/assets/feature_crossplatform.png
+      imageUrl: "assets/img_main_travyplay6.png" 
     },
 
      {
       title: "Liste IPTV",
       description: "Guarda canali da tutto il mondo in chiaro, filtrati per nazione o categoria",
-      imageUrl: "assets/img_main_travyplay7.png" // Corrisponde a /public/assets/feature_crossplatform.png
+      imageUrl: "assets/img_main_travyplay7.png" 
     },
     
     {
       title: "Libreria Intelligente",
-      description: "Importa i tuoi eBook e documenti oppure oleggia o leggi gratuitamente da OpenLibrary & InternetArchive con la sezione dedicata.",
-      imageUrl: "assets/img_main_travyplay5.png" // Corrisponde a /public/assets/feature_library.png
+      description: "Importa i tuoi eBook e documenti oppure noleggia gratuitamente da OpenLibrary & InternetArchive dalla la sezione dedicata.",
+      imageUrl: "assets/img_main_travyplay5.png" 
     },
     
   ]
