fixing private repo stats

--- a/src/components/Stats.astro
+++ b/src/components/Stats.astro
@@ -4,9 +4,10 @@
       My GitHub Stats
     </h2>
 
-<div>
-  <img src="https://github-readme-stats.vercel.app/api?username=antoniotraversa&show_icons=true&locale=it&theme=gotham&bg_color=212121&title_color=F7B23B&text_color=FFFFFF&icon_color=4CAF50" alt="Statistiche GitHub di antoniotraversa" />
-  <br><br>
-  <img src="https://github-readme-stats.vercel.app/api/top-langs?username=antoniotraversa&layout=compact&locale=it&theme=gotham&bg_color=212121&title_color=F7B23B&text_color=FFFFFF" alt="Linguaggi più usati da antoniotraversa" />
-</div>
+    <div>
+      <img src="https://github-readme-stats-phi-rose-44.vercel.app/api?username=antoniotraversa&show_icons=true&locale=it&theme=gotham&bg_color=212121&title_color=F7B23B&text_color=FFFFFF&icon_color=4CAF50&count_private=true" alt="Statistiche GitHub di antoniotraversa" />
+      <br><br>
+      <img src="https://github-readme-stats-phi-rose-44.vercel.app/api/top-langs?username=antoniotraversa&layout=compact&locale=it&theme=gotham&bg_color=212121&title_color=F7B23B&text_color=FFFFFF&count_private=true" alt="Linguaggi più usati da antoniotraversa" />
+    </div>
+  </div>
 </section>
